code split into multiple files, project renamed to Ymacs

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -1,4 +1,4 @@
-.XCodeEditor {
+.Ymacs_Buffer {
   background-color: #325;
   color: wheat;
   font-family: monospace;
@@ -6,13 +6,13 @@
   line-height: 15px;
 }
 
-.XCodeEditor-caret {
+.Ymacs-caret {
   position: absolute;
   opacity: 0.5;
   background-color: #aaa;
 }
 
-.XCodeEditor-focus .XCodeEditor-caret {
+.Ymacs_Buffer-focus .Ymacs-caret {
   opacity: 1;
   background-color: #f51;
   color: #324;
@@ -20,15 +20,15 @@
   border: 0;
 }
 
-.XCodeEditor-focus .XCodeEditor-caret-blink {
+.Ymacs_Buffer-focus .Ymacs-caret-blink {
   visibility: hidden;
 }
 
-.XCodeEditor-current-line {
+.Ymacs-current-line {
   background-color: #231343;
 }
 
-.XCodeEditor-overwrite-mode .XCodeEditor-caret {
+.Ymacs-overwrite-mode .Ymacs-caret {
   -moz-border-radius: 15px;
   background-color: #97f;
   color: #fff;
