basic syntax highlighting, still needs a lot of work :-/

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -1,9 +1,11 @@
+@import url("ymacs-syntax.css");
+
 .Ymacs_Frame {
   background-color: #325;
   color: wheat;
   font-family: monospace;
   white-space: pre;
-  line-height: 15px;
+  line-height: 17px;
 }
 
 .Ymacs-caret {
