--- a/src/css/ymacs-syntax.css
+++ b/src/css/ymacs-syntax.css
@@ -30,3 +30,4 @@
 .Ymacs_Frame .fontlock-line-comment,
 .Ymacs_Frame .fontlock-multiline-comment   { color: rgb(255, 69, 0); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
 .Ymacs_Frame .fontlock-number { color: yellow; }
+.Ymacs_Frame .fontlock-operator { color: #aac; }
