--- a/src/css/ymacs-syntax.css
+++ b/src/css/ymacs-syntax.css
@@ -12,4 +12,4 @@
 .Ymacs_Frame .fontlock-line-comment,
 .Ymacs_Frame .fontlock-multiline-comment   { color: rgb(69, 255, 0); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
 .Ymacs_Frame .fontlock-number { color: yellow; }
-.Ymacs_Frame .fontlock-operator { color: #aac; }
+.Ymacs_Frame .fontlock-operator { color: #fff; }
