--- a/src/css/ymacs-syntax.css
+++ b/src/css/ymacs-syntax.css
@@ -1,16 +1,17 @@
-.Ymacs_Frame .fontlock-type {
-  color: #87ceeb;
-  font-weight: bold;
-}
-
-.Ymacs_Frame .fontlock-builtin   { color: rgb(176, 196, 222); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-function-name   { color: rgb(135, 206, 250);  font-weight: 700; font-style: normal;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-variable-name   { color: rgb(238, 221, 130);  font-weight: 700; font-style: normal;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-constant   { color: rgb(127, 255, 212); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-string   { color: rgb(220, 160, 80); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-keyword   { color: rgb(0, 255, 255);  font-weight: 700; font-style: normal;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-line-comment,
-.Ymacs_Frame .fontlock-multiline-comment   { color: rgb(69, 255, 0); font-style: normal;  font-weight: 500;  font-stretch: normal; text-decoration: none; }
-.Ymacs_Frame .fontlock-number { color: yellow; }
-.Ymacs_Frame .fontlock-operator { color: #fff; }
-.Ymacs_Frame .fontlock-error { color: #f52; font-weight: bold; }
+.Ymacs_Frame .type { color: #87ceeb; font-weight: bold; }
+.Ymacs_Frame .builtin   { color: rgb(176, 196, 222); }
+.Ymacs_Frame .function-name   { color: rgb(135, 206, 250);  font-weight: bold; }
+.Ymacs_Frame .variable-name   { color: rgb(238, 221, 130);  font-weight: bold; }
+.Ymacs_Frame .constant   { color: rgb(127, 255, 212); font-style: normal;  }
+.Ymacs_Frame .string { color: rgb(220, 160, 80); font-style: normal;  }
+.Ymacs_Frame .string-starter,
+.Ymacs_Frame .string-stopper { color: rgb(255, 80, 80); }
+.Ymacs_Frame .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
+.Ymacs_Frame .comment,
+.Ymacs_Frame .mcomment { color: rgb(69, 255, 0); font-style: normal; }
+.Ymacs_Frame .comment-starter,
+.Ymacs_Frame .mcomment-starter,
+.Ymacs_Frame .mcomment-stopper { color: #5b5; }
+.Ymacs_Frame .number { color: yellow; }
+.Ymacs_Frame .operator { color: #fff; }
+.Ymacs_Frame .error { color: #f52; font-weight: bold; }
