--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -4,6 +4,7 @@
   background-color: #224;
   color: wheat;
   font-family: monospace;
+  font-size: 13px;
   white-space: pre;
   line-height: 17px;
 }
