--- a/src/css/ymacs-syntax.css
+++ b/src/css/ymacs-syntax.css
@@ -28,10 +28,10 @@
 /* XML mode */
 .Ymacs_Frame .xml-open-tag { color: rgb(0, 255, 255); font-weight: bold; }
 .Ymacs_Frame .xml-close-tag { color: rgb(0, 255, 255); }
-.Ymacs_Frame .xml-attribute { color: rgb(176, 196, 222); }
+.Ymacs_Frame .xml-attribute { color: rgb(106, 176, 222); }
 .Ymacs_Frame .xml-entity-starter,
 .Ymacs_Frame .xml-entity-stopper { color: #f4c; }
 .Ymacs_Frame .xml-entity { color: #e4f; font-style: normal;  }
 .Ymacs_Frame .xml-shorttag-slash { color: #f51; }
 .Ymacs_Frame .xml-open-bracket,
-.Ymacs_Frame .xml-close-bracket { color: #bac; }
+.Ymacs_Frame .xml-close-bracket { color: #a56500; }
