--- a/src/css/ymacs-syntax.css
+++ b/src/css/ymacs-syntax.css
@@ -10,10 +10,10 @@
 .Ymacs_Frame .string-starter,
 .Ymacs_Frame .string-stopper { color: #a56500; }
 
-.Ymacs_Frame .regexp { color: #e4f; font-style: normal;  }
+.Ymacs_Frame .regexp { color: #d9f; font-style: normal;  }
 .Ymacs_Frame .regexp-starter,
 .Ymacs_Frame .regexp-stopper,
-.Ymacs_Frame .regexp-modifier { color: #a56500; font-weight: bold; }
+.Ymacs_Frame .regexp-modifier { color: #e4f; font-weight: bold; }
 
 .Ymacs_Frame .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
 .Ymacs_Frame .comment,
