--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -49,8 +49,8 @@
   font-family: monospace;
   white-space: pre;
   line-height: 17px;
-  background-color: wheat;
-  color: #224;
+  background-color: #483d8b;
+  color: wheat;
 }
 .Ymacs_Modeline:after {
   content: "-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
