Basic support for overlays, which are used to highlight the matching parens in JS mode.  Overlays will be useful to implement "pc-selection" mode too (display transient mark)

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -40,6 +40,10 @@
   color: #fff;
 }
 
+.Ymacs_Overlay { position: absolute; width: 100%; opacity: 0.5; }
+.Ymacs_Overlay .match-paren { background: #fff; opacity: 0.4; }
+.Ymacs_Overlay .foo { background: #ff0; opacity: 0.7; }
+
 .Ymacs_Message_Popup {
   background-color: wheat;
   padding: 10px;
