--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -41,7 +41,7 @@
 }
 
 .Ymacs_Overlay { position: absolute; width: 100%; opacity: 0.5; }
-.Ymacs_Overlay .match-paren { background: #fff; opacity: 0.4; }
+.Ymacs_Overlay .match-paren { background: #ff8; opacity: 0.4; }
 .Ymacs_Overlay .foo { background: #ff0; opacity: 0.7; }
 
 .Ymacs_Message_Popup {
