Frame splitting support (C-x 1 / C-x 2 / C-x 3)

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -53,8 +53,8 @@
   font-family: monospace;
   white-space: pre;
   line-height: 17px;
-  background-color: #483d8b;
-  color: wheat;
+  background-color: #cbe;
+  color: #000;
 }
 .Ymacs_Modeline:after {
   content: "-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
