Fixed keymaps for Firefox on the Mac (required a DL update).  Good news, it should be possible to make it work decently with Safari too, though some trial and error seems to be required.

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -3,7 +3,7 @@
 .Ymacs_Frame {
   background-color: #224;
   color: wheat;
-  font-family: monospace;
+  font-family: "Lucida Sans Typewriter",monospace;
   font-size: 14px;
   white-space: pre;
 }
@@ -41,11 +41,13 @@
 }
 
 .Ymacs_Modeline {
-  font-family: monospace;
+  font-family: "Lucida Sans Typewriter",monospace;
   white-space: pre;
   line-height: 17px;
   background-color: #cbe;
   color: #000;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #000;
 }
 .Ymacs_Modeline:after {
   content: "-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
