--- a/src/css/ymacs-syntax-dark.css
+++ b/src/css/ymacs-syntax-dark.css
@@ -1,41 +1,41 @@
 /* general stuff */
 
-.Ymacs_Frame .type { color: #87ceeb; font-weight: bold; }
-.Ymacs_Frame .builtin   { color: rgb(176, 196, 222); }
-.Ymacs_Frame .function-name   { color: rgb(135, 206, 250);  font-weight: bold; }
-.Ymacs_Frame .variable-name   { color: rgb(238, 221, 130);  font-weight: bold; }
-.Ymacs_Frame .constant   { color: rgb(127, 255, 212); font-style: normal;  }
+.Ymacs-Theme-dark .Ymacs_Frame .type { color: #87ceeb; font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .builtin   { color: rgb(176, 196, 222); }
+.Ymacs-Theme-dark .Ymacs_Frame .function-name   { color: rgb(135, 206, 250);  font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .variable-name   { color: rgb(238, 221, 130);  font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .constant   { color: rgb(127, 255, 212); font-style: normal;  }
 
-.Ymacs_Frame .string { color: rgb(220, 160, 80); font-style: normal;  }
-.Ymacs_Frame .string-starter,
-.Ymacs_Frame .string-stopper { color: #a56500; }
+.Ymacs-Theme-dark .Ymacs_Frame .string { color: rgb(220, 160, 80); font-style: normal;  }
+.Ymacs-Theme-dark .Ymacs_Frame .string-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .string-stopper { color: #a56500; }
 
-.Ymacs_Frame .regexp { color: #d9f; font-style: normal;  }
-.Ymacs_Frame .regexp-starter,
-.Ymacs_Frame .regexp-stopper,
-.Ymacs_Frame .regexp-modifier { color: #e4f; font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .regexp { color: #d9f; font-style: normal;  }
+.Ymacs-Theme-dark .Ymacs_Frame .regexp-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .regexp-stopper,
+.Ymacs-Theme-dark .Ymacs_Frame .regexp-modifier { color: #e4f; font-weight: bold; }
 
-.Ymacs_Frame .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
-.Ymacs_Frame .comment,
-.Ymacs_Frame .mcomment { color: rgb(255, 96, 96); font-style: normal; }
-.Ymacs_Frame .comment-starter,
-.Ymacs_Frame .mcomment-starter,
-.Ymacs_Frame .mcomment-stopper { color: #999; }
-.Ymacs_Frame .number { color: yellow; }
-.Ymacs_Frame .operator { color: #fff; }
-.Ymacs_Frame .error { color: #ff0; background-color: #a00; font-weight: bold; }
-/* .Ymacs_Frame .trailing-whitespace { text-decoration: underline; color: #777; } */
+.Ymacs-Theme-dark .Ymacs_Frame .keyword   { color: rgb(0, 255, 255);  font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .comment,
+.Ymacs-Theme-dark .Ymacs_Frame .mcomment { color: rgb(255, 96, 96); font-style: normal; }
+.Ymacs-Theme-dark .Ymacs_Frame .comment-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .mcomment-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .mcomment-stopper { color: #999; }
+.Ymacs-Theme-dark .Ymacs_Frame .number { color: yellow; }
+.Ymacs-Theme-dark .Ymacs_Frame .operator { color: #fff; }
+.Ymacs-Theme-dark .Ymacs_Frame .error { color: #ff0; background-color: #a00; font-weight: bold; }
+/* .Ymacs-Theme-dark .Ymacs_Frame .trailing-whitespace { text-decoration: underline; color: #777; } */
 
 /* XML mode */
-.Ymacs_Frame .xml-open-tag,
-.Ymacs_Frame .xml-close-tag { color: rgb(0, 255, 255); font-weight: bold; }
-.Ymacs_Frame .xml-attribute { color: rgb(106, 176, 222); }
-.Ymacs_Frame .xml-entity-starter,
-.Ymacs_Frame .xml-entity-stopper { color: #f4c; }
-.Ymacs_Frame .xml-entity { color: #e4f; font-style: normal;  }
-.Ymacs_Frame .xml-closetag-slash { color: #f51; }
-.Ymacs_Frame .xml-open-bracket,
-.Ymacs_Frame .xml-close-bracket { color: #a56500; }
-.Ymacs_Frame .xml-cdata { color: #bbb; }
-.Ymacs_Frame .xml-cdata-starter,
-.Ymacs_Frame .xml-cdata-stopper { color: #888; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-open-tag,
+.Ymacs-Theme-dark .Ymacs_Frame .xml-close-tag { color: rgb(0, 255, 255); font-weight: bold; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-attribute { color: rgb(106, 176, 222); }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-entity-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .xml-entity-stopper { color: #f4c; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-entity { color: #e4f; font-style: normal;  }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-closetag-slash { color: #f51; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-open-bracket,
+.Ymacs-Theme-dark .Ymacs_Frame .xml-close-bracket { color: #a56500; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-cdata { color: #bbb; }
+.Ymacs-Theme-dark .Ymacs_Frame .xml-cdata-starter,
+.Ymacs-Theme-dark .Ymacs_Frame .xml-cdata-stopper { color: #888; }
