--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -1,4 +1,5 @@
 @import url("ymacs-dark.css");
+@import url("ymacs-light.css");
 
 .Ymacs_Frame {
   white-space: pre;
@@ -36,4 +37,10 @@
 
 .Ymacs_Modeline:after {
   content: "-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------";
+}
+
+.Ymacs_Message_Popup {
+  background-color: wheat;
+  color: #000;
+  padding: 10px;
 }
