--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -17,6 +17,10 @@
   opacity: 1;
 }
 
+.Ymacs_Frame-hasOverlays .Ymacs-current-line {
+  background: transparent !important;
+}
+
 .Ymacs-overwrite-mode .Ymacs-caret {
   -moz-border-radius: 15px;
 }
