--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -32,3 +32,13 @@
   border-top: 1px solid #fff;
   border-bottom: 1px solid #000;
 }
+
+.Ymacs-Theme-dark .Ymacs-line-numbers .Ymacs-frame-content div.line:before {
+  border-right: 1px dotted #888;
+  background-color: #112;
+}
+
+.Ymacs-Theme-dark .Ymacs-line-numbers .Ymacs-frame-content div.Ymacs-current-line:before {
+  background-color: #000;
+  color: #f51;
+}
