--- a/src/css/ymacs-light.css
+++ b/src/css/ymacs-light.css
@@ -33,3 +33,13 @@
   border-top: 1px solid #fff;
   border-bottom: 1px solid #000;
 }
+
+.Ymacs-Theme-light .Ymacs-line-numbers .Ymacs-frame-content div.line:before {
+  border-right: 1px dotted #888;
+  background-color: #edc;
+}
+
+.Ymacs-Theme-light .Ymacs-line-numbers .Ymacs-frame-content div.Ymacs-current-line:before {
+  background-color: #fdb;
+  color: #000;
+}
