Optional prefix argument supported in htmlize_region.  Empty arg (C-u) will instruct it to include line numbers based on actual line numbers from the code.  A numeric argument will instruct it to start from that number, i.e. C-u 3 M-x htmlize_region will start enumeration from 3.

--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -18,9 +18,9 @@
 
 .Ymacs_Minibuffer .Ymacs-caret { background-color: inherit; color: inherit; }
 
-.Ymacs_Frame-hasOverlays .Ymacs-current-line {
-  background: transparent !important;
-}
+/* .Ymacs_Frame-hasOverlays .Ymacs-current-line { */
+/*   background: transparent !important; */
+/* } */
 
 .Ymacs-overwrite-mode .Ymacs-caret {
   -moz-border-radius: 15px;
