--- a/src/css/ymacs.css
+++ b/src/css/ymacs.css
@@ -7,6 +7,10 @@
   /* font-size: 14px; */
 }
 
+.Ymacs-frame-content div.line {
+  white-space: pre;
+}
+
 .Ymacs-caret {
   margin: 0;
   padding: 0;
@@ -26,9 +30,9 @@
   -moz-border-radius: 15px;
 }
 
-.Ymacs_Overlay { position: absolute; right: 0; opacity: 0.5; }
-.Ymacs_Overlay .match-paren { opacity: 0.4; }
-.Ymacs_Overlay .selection { opacity: 0.7; }
+.Ymacs_Overlay { position: absolute; right: 0; opacity: 0.5; filter: alpha(opacity=50); }
+.Ymacs_Overlay .match-paren { opacity: 0.4; filter: alpha(opacity=40); }
+.Ymacs_Overlay .selection { opacity: 0.7; filter: alpha(opacity=70); }
 
 .Ymacs_Message_Popup {
   background-color: wheat;
