Some new color skins, various fixes/cleanups:
- intercept C-g globally
- C-F4 --> kill_buffer
- added more Lisp keywords
- xml_zen_expand: support for nesting tags (parens)
- destroy temporary marker in indent_region (leak)
- update markers during undo, instead of trusting the undo queue only (seems
  to fix some undo issues).

--- a/src/css/ymacs-dark.css
+++ b/src/css/ymacs-dark.css
@@ -1,9 +1,4 @@
-@import url("ymacs-syntax-dark.css");
-
-.Ymacs-Theme-dark .Ymacs_Frame {
-  background-color: #223;
-  color: wheat;
-}
+@import url("themes/emacs-charcoal-black.css");
 
 .Ymacs-Theme-dark .Ymacs-caret {
   background-color: #aaa;
